@@ -5,19 +5,19 @@ module UrlFilters
   include ActionView::Helpers::AssetTagHelper
 
   def link_to_article(article, text = nil)
-    content_tag :a, h(text || article['title']), :href => article['url']
+    content_tag :a, text || h(article['title']), :href => article['url']
   end
   
   def link_to_page(page, section = nil, text = nil)
-    content_tag :a, h(text || page['title']), page_anchor_options(page, section)
+    content_tag :a, text || h(page['title']), page_anchor_options(page, section)
   end
 
-  def link_to_comments(article)
-    content_tag :a, pluralize(article['comments_count'], 'comment'), :href => article['url']
+  def link_to_comments(article, text = nil)
+    content_tag :a, text || pluralize(article['comments_count'], 'comment'), :href => article['url']
   end
   
   def link_to_section(section, text = nil)
-    content_tag :a, h(text || section['name']), :href => section['url'], :title => section['title']
+    content_tag :a, text || h(section['name']), :href => section['url'], :title => section['title']
   end
 
   def img_tag(img, options = {})
